# LAB2

./: .gitignore  CMakeLists.txt  README.md
app/: CMakeLists.txt  main.cpp
core/: ArraySequence.hpp  ArraySequence.tpp  Bit.cpp  Bit.hpp  BitSequence.cpp  BitSequence.hpp  CMakeLists.txt  DynamicArray.hpp  DynamicArray.tpp  Enumerator.hpp  Exceptions.hpp  ICollection.hpp  IEnumerable.hpp  IEnumerator.hpp  ISequenceBuilder.hpp  ImmutableArraySequence.hpp  ImmutableListSequence.hpp  LinkedList.hpp  LinkedList.tpp  ListSequence.hpp  ListSequence.tpp  MutableArraySequence.hpp  MutableListSequence.hpp  Option.hpp  Sequence.hpp  Sequence.tpp  SequenceBuilders.hpp  SequenceIO.hpp  Utils.hpp
tests/: CMakeLists.txt  test_array_sequence.cpp  test_bit_sequence.cpp  test_dynamic_array.cpp  test_linked_list.cpp  test_list_sequence.cpp  test_sequence.cpp  test_sequences.cpp  test_utils_and_bits.cpp
